--- a/Star Wars Challenge/Category Detail Table View/CategoryDetail TableView Cell/CategoryDetailTableViewCell.xib
+++ b/Star Wars Challenge/Category Detail Table View/CategoryDetail TableView Cell/CategoryDetailTableViewCell.xib
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HEADER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KkY-TT-Djs">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HEADER" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="KkY-TT-Djs">
                         <rect key="frame" x="80" y="7" width="239" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -28,15 +28,15 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CREATED AT" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nSg-bF-08p">
-                        <rect key="frame" x="337.5" y="5" width="72.5" height="14.5"/>
+                        <rect key="frame" x="333.5" y="5" width="72.5" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="detailedDisclosure" translatesAutoresizingMaskIntoConstraints="NO" id="sqN-si-Bx4">
-                        <rect key="frame" x="398" y="34" width="12" height="12"/>
+                        <rect key="frame" x="393" y="34" width="12" height="12"/>
                     </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HZ3-i1-ERQ">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HZ3-i1-ERQ" customClass="AvatarView" customModule="Star_Wars_Challenge" customModuleProvider="target">
                         <rect key="frame" x="14" y="10" width="60" height="60"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -50,7 +50,7 @@
                     <constraint firstItem="KkY-TT-Djs" firstAttribute="top" secondItem="DDH-iO-RdD" secondAttribute="top" constant="7" id="3UM-SP-yXz"/>
                     <constraint firstItem="sqN-si-Bx4" firstAttribute="top" secondItem="DDH-iO-RdD" secondAttribute="top" constant="34" id="CFU-iF-qg7"/>
                     <constraint firstItem="QA5-ZG-k1w" firstAttribute="top" secondItem="KkY-TT-Djs" secondAttribute="bottom" constant="1" id="CxQ-QT-DxZ"/>
-                    <constraint firstAttribute="trailing" secondItem="sqN-si-Bx4" secondAttribute="trailing" constant="4" id="LcN-mm-JMP"/>
+                    <constraint firstAttribute="trailing" secondItem="sqN-si-Bx4" secondAttribute="trailing" constant="9" id="LcN-mm-JMP"/>
                     <constraint firstItem="HZ3-i1-ERQ" firstAttribute="top" secondItem="DDH-iO-RdD" secondAttribute="top" constant="10" id="P3A-I3-aSd"/>
                     <constraint firstAttribute="trailing" secondItem="QA5-ZG-k1w" secondAttribute="trailing" constant="40" id="RR6-EH-F8k"/>
                     <constraint firstItem="nSg-bF-08p" firstAttribute="top" secondItem="DDH-iO-RdD" secondAttribute="top" constant="5" id="TjI-XF-OV5"/>
@@ -58,12 +58,14 @@
                     <constraint firstItem="HZ3-i1-ERQ" firstAttribute="leading" secondItem="DDH-iO-RdD" secondAttribute="leading" constant="14" id="YxS-j0-3V2"/>
                     <constraint firstItem="KkY-TT-Djs" firstAttribute="leading" secondItem="HZ3-i1-ERQ" secondAttribute="trailing" constant="6" id="ag3-mB-3tK"/>
                     <constraint firstItem="QA5-ZG-k1w" firstAttribute="leading" secondItem="HZ3-i1-ERQ" secondAttribute="trailing" constant="6" id="tVH-zI-oa5"/>
-                    <constraint firstAttribute="trailing" secondItem="nSg-bF-08p" secondAttribute="trailing" constant="4" id="uVM-bA-ufE"/>
+                    <constraint firstAttribute="trailing" secondItem="nSg-bF-08p" secondAttribute="trailing" constant="8" id="uVM-bA-ufE"/>
                     <constraint firstAttribute="trailing" secondItem="KkY-TT-Djs" secondAttribute="trailing" constant="95" id="wgV-Iz-kFd"/>
-                    <constraint firstItem="sqN-si-Bx4" firstAttribute="leading" secondItem="QA5-ZG-k1w" secondAttribute="trailing" constant="24" id="xON-Ys-Rmd"/>
+                    <constraint firstItem="sqN-si-Bx4" firstAttribute="leading" secondItem="QA5-ZG-k1w" secondAttribute="trailing" constant="19" id="xON-Ys-Rmd"/>
                 </constraints>
             </tableViewCellContentView>
+            <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
+                <outlet property="avatarView" destination="HZ3-i1-ERQ" id="muY-2s-4tM"/>
                 <outlet property="createdAtLabel" destination="nSg-bF-08p" id="4ft-Z8-ULi"/>
                 <outlet property="headerLabel" destination="KkY-TT-Djs" id="ykP-v7-ZzC"/>
                 <outlet property="subTextLabel" destination="QA5-ZG-k1w" id="MZZ-xx-7IH"/>
