--- a/Star Wars Challenge/Item View Controllers/ItemView Header/ItemHeaderView.xib
+++ b/Star Wars Challenge/Item View Controllers/ItemView Header/ItemHeaderView.xib
@@ -14,30 +14,27 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="283"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIP-lG-F3k">
-                    <rect key="frame" x="31" y="193" width="353" height="45"/>
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ddI-Dx-yG4" customClass="AvatarView" customModule="Star_Wars_Challenge" customModuleProvider="target">
+                    <rect key="frame" x="107" y="24" width="200" height="219.5"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIP-lG-F3k">
+                    <rect key="frame" x="31" y="216" width="353" height="45"/>
                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                     <color key="textColor" systemColor="systemYellowColor"/>
                     <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddI-Dx-yG4">
-                    <rect key="frame" x="137" y="45" width="140" height="140"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="ddI-Dx-yG4" secondAttribute="height" multiplier="1:1" id="Hnf-8S-gIn"/>
-                    </constraints>
-                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="TIP-lG-F3k" firstAttribute="top" secondItem="ddI-Dx-yG4" secondAttribute="bottom" constant="8" symbolic="YES" id="4ue-Qb-HEc"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="TIP-lG-F3k" secondAttribute="bottom" constant="45" id="94e-Ry-Yse"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="TIP-lG-F3k" secondAttribute="trailing" constant="30" id="Hap-RA-p5e"/>
-                <constraint firstItem="ddI-Dx-yG4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="137" id="NIS-Tf-8bt"/>
-                <constraint firstItem="TIP-lG-F3k" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="31" id="TVn-2i-ZvF"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ddI-Dx-yG4" secondAttribute="trailing" constant="137" id="xJK-3e-LnF"/>
-                <constraint firstItem="ddI-Dx-yG4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="45" id="ziv-RV-G2Y"/>
+                <constraint firstItem="ddI-Dx-yG4" firstAttribute="centerX" secondItem="TIP-lG-F3k" secondAttribute="centerX" id="SJ8-g6-eAn"/>
+                <constraint firstItem="ddI-Dx-yG4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="24" id="SSb-0p-HCx"/>
+                <constraint firstItem="TIP-lG-F3k" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="31" id="UJv-OL-SZu"/>
+                <constraint firstItem="ddI-Dx-yG4" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="VmS-hd-dum"/>
+                <constraint firstItem="TIP-lG-F3k" firstAttribute="top" secondItem="ddI-Dx-yG4" secondAttribute="bottom" constant="-27.5" id="ejO-hq-Tsu"/>
+                <constraint firstItem="ddI-Dx-yG4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="107" id="leP-5G-AG3"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="TIP-lG-F3k" secondAttribute="bottom" constant="22" id="n9j-zD-ScA"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -48,9 +45,6 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
