--- a/Star Wars Challenge/Custom Views/Category Detail Header/CategoryDetailHeader.xib
+++ b/Star Wars Challenge/Custom Views/Category Detail Header/CategoryDetailHeader.xib
@@ -14,16 +14,10 @@
             <rect key="frame" x="0.0" y="0.0" width="442" height="84"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dsc-Ps-bQ9">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Fear is the path to the dark side. Fear leads to anger. Anger leads to hate. Hate leads to suffering.”" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dsc-Ps-bQ9">
                     <rect key="frame" x="10" y="-3" width="423" height="91"/>
-                    <attributedString key="attributedText">
-                        <fragment content="&quot;Fear is the path to the dark side. Fear leads to anger. Anger leads to hate. Hate leads to suffering.”">
-                            <attributes>
-                                <font key="NSFont" metaFont="menu" size="14"/>
-                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="3" tighteningFactorForTruncation="0.0"/>
-                            </attributes>
-                        </fragment>
-                    </attributedString>
+                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
+                    <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
