--- a/Star Wars Challenge/Custom Views/Item View Header/ItemHeaderView.xib
+++ b/Star Wars Challenge/Custom Views/Item View Header/ItemHeaderView.xib
@@ -14,12 +14,12 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="283"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ddI-Dx-yG4" customClass="AvatarView" customModule="Star_Wars_Challenge" customModuleProvider="target">
-                    <rect key="frame" x="107" y="24" width="200" height="219.5"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddI-Dx-yG4" customClass="AvatarView" customModule="Star_Wars_Challenge" customModuleProvider="target">
+                    <rect key="frame" x="107" y="16" width="200" height="200"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIP-lG-F3k">
-                    <rect key="frame" x="31" y="216" width="353" height="45"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIP-lG-F3k">
+                    <rect key="frame" x="31" y="224" width="353" height="45"/>
                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                     <color key="textColor" systemColor="systemYellowColor"/>
                     <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -29,12 +29,12 @@
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="ddI-Dx-yG4" firstAttribute="centerX" secondItem="TIP-lG-F3k" secondAttribute="centerX" id="SJ8-g6-eAn"/>
-                <constraint firstItem="ddI-Dx-yG4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="24" id="SSb-0p-HCx"/>
+                <constraint firstItem="ddI-Dx-yG4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="SSb-0p-HCx"/>
                 <constraint firstItem="TIP-lG-F3k" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="31" id="UJv-OL-SZu"/>
                 <constraint firstItem="ddI-Dx-yG4" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="VmS-hd-dum"/>
-                <constraint firstItem="TIP-lG-F3k" firstAttribute="top" secondItem="ddI-Dx-yG4" secondAttribute="bottom" constant="-27.5" id="ejO-hq-Tsu"/>
+                <constraint firstItem="TIP-lG-F3k" firstAttribute="top" secondItem="ddI-Dx-yG4" secondAttribute="bottom" constant="8" id="ejO-hq-Tsu"/>
                 <constraint firstItem="ddI-Dx-yG4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="107" id="leP-5G-AG3"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="TIP-lG-F3k" secondAttribute="bottom" constant="22" id="n9j-zD-ScA"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="TIP-lG-F3k" secondAttribute="bottom" constant="14" id="n9j-zD-ScA"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
