--- a/Star Wars Challenge/Modules/Root Category Table View/Root TableView Cell/CategoryTableViewCell.xib
+++ b/Star Wars Challenge/Modules/Root Category Table View/Root TableView Cell/CategoryTableViewCell.xib
@@ -20,18 +20,18 @@
                         <rect key="frame" x="9" y="7" width="396" height="77"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S1C-Zd-Pip">
-                                <rect key="frame" x="13" y="13" width="50" height="50"/>
+                                <rect key="frame" x="13" y="13.5" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="ju3-UU-UZn"/>
                                     <constraint firstAttribute="height" constant="50" id="l7g-5j-pz1"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kop-HJ-tKk">
-                                <rect key="frame" x="80" y="28" width="286" height="20"/>
+                                <rect key="frame" x="80" y="28.5" width="286" height="20.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="286" id="xgV-Pk-iq1"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
